--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,15 @@
-body {
+*,
+*::before,
+*::after {
   margin: 0;
+  padding: 0;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: nasalization, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  margin: auto 20vw;
 }
